# opportunity

./: .gitignore  README.md  arxiv_module.py  day1-impl.ps1  global_rules.md  patch-modules.ps1  patch-youtube.ps1  prd.md  project_tree.txt  pyproject.toml  save.ps1  setup-missing-deps.ps1  setup.ps1  setup2.ps1  youtube_module.py
archive/: arxiv_module.py  cache_utils.py  llm_utils.py  podcast_module.py  setup-deps.ps1  smoke.ps1  text_utils.py
docs/: Opportunity PRD.docx  prd.docx  ~$prd.docx
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
git-log/: commit-20250810-104014.txt  commit-20250811-232519.txt  commit-20250811-235448.txt  commit-20250813-103517.txt
input/: Founder_s_Discovery_Engine_Submissions_2025-08-13.csv
ok_mvp/: __init__.py  __main__.py  arxiv_module.py  config.py  create_new_profile.py  generate_hypotheses.py  generate_search_terms.py  logger.py  main.py  podcast_module.py  run_toolkit_research.py  youtube_module.py
